@@ -78,7 +78,8 @@ def addoptions(parser):
 
     mirror.addoption("--offline-mode", action="store_true",
             help="(experimental) prevents connections to any upstream server "
-                 "(e.g. pypi) but still serves all cached pypi files")
+                 "(e.g. pypi) and only serves locally cached files through the "
+                 "simple index used by pip.")
 
     deploy = parser.addgroup("deployment and data options")
 
