@@ -138,6 +138,5 @@ def test_profiling_tween(capsys):
 @pytest.mark.parametrize("allowRedirect", [True, False])
 def test_offline_mode_httpget_returns_server_error(makexom, url, allowRedirect):
     xom = makexom(["--offline-mode"], httpget=XOM.httpget, mocking=False)
-
     r = xom.httpget(url, allowRedirect)
-    assert r.status_code == 500
+    assert r.status_code == 503
